--- a/themes/garden/layout/layout.ejs
+++ b/themes/garden/layout/layout.ejs
@@ -10,10 +10,10 @@
    <link rel="author" href="/humans.txt">
    <link rel="alternate" href="http://feeds.feedburner.com/timgthomas" title="Tim G. Thomas" type="application/rss+xml">
    <link rel="icon" type="image/x-icon" href="/favicon.png">
-   <link rel="stylesheet" href="/public/css/normalize.css">
-   <link rel="stylesheet" href="/public/css/font-awesome.css">
-   <link rel="stylesheet" href="/public/css/base.css">
-   <link rel="stylesheet" href="/public/css/print.css" media="print">
+   <link rel="stylesheet" href="/css/normalize.css">
+   <link rel="stylesheet" href="/css/font-awesome.css">
+   <link rel="stylesheet" href="/css/base.css">
+   <link rel="stylesheet" href="/css/print.css" media="print">
 </head>
 
 <body class="blog">
@@ -38,7 +38,7 @@
    <footer>
       <p>&copy; Tim G. Thomas</p>
    </footer>
-   <script src="/public/js/lib/jquery-1.8.1.min.js"></script>
+   <script src="/js/lib/jquery-1.8.1.min.js"></script>
    <!-- {% if page.home %}
       <script async>
          /* * * CONFIGURATION VARIABLES: EDIT BEFORE PASTING INTO YOUR WEBPAGE * * */
@@ -53,7 +53,7 @@
          }());
       </script>
    {% endif %} -->
-   <script src="/public/js/global.js"></script>
+   <script src="/js/global.js"></script>
    <!-- Google Analytics -->
    <script>
       (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
