--- a/themes/garden/layout/layout.ejs
+++ b/themes/garden/layout/layout.ejs
@@ -19,7 +19,7 @@
 <body class="blog">
    <header role="banner">
       <div class="container">
-         <h1 class="name"><a href="/#" rel="home">Tim <em>G.</em> Thomas</a></h1>
+         <h1 class="name"><a href="/" rel="home">Tim <em>G.</em> Thomas</a></h1>
          <nav id="navigation">
             <ul>
                <li><a href="http://feeds.feedburner.com/timgthomas"><i class="icon icon-rss"></i></a></li>
