--- a/themes/garden/layout/post.ejs
+++ b/themes/garden/layout/post.ejs
@@ -14,7 +14,7 @@
       <script type="text/javascript">
          /* * * CONFIGURATION VARIABLES: EDIT BEFORE PASTING INTO YOUR WEBPAGE * * */
          var disqus_shortname = 'timgthomas'; // required: replace example with your forum shortname
-         var disqus_identifier = 'http://timgthomas.com{{ page.url }}';
+         var disqus_identifier = 'http://timgthomas.com/<%- page.path %>';
 
          /* * * DON'T EDIT BELOW THIS LINE * * */
          (function() {
