update some posts' content to fix incorrect rendering

--- a/themes/tria/layout/layout.ejs
+++ b/themes/tria/layout/layout.ejs
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Tim G. Thomas</title>
-  <link rel="stylesheet" href="//brick.a.ssl.fastly.net/Fira+Sans:300">
+  <link rel="stylesheet" href="//brick.a.ssl.fastly.net/Fira+Sans:300,300i">
   <link rel="stylesheet" href="/css/style.css">
 </head>
 <body>
