--- a/themes/tria/source/css/style.styl
+++ b/themes/tria/source/css/style.styl
@@ -2,6 +2,7 @@
 
 alabaster = rgb(241, 242, 237)
 aqua      = rgb( 53, 171, 165)
+dark-aqua = rgb(  0, 135, 127)
 orange    = rgb(248, 142,  41)
 purple    = rgb(182,  81, 154)
 
@@ -24,6 +25,9 @@ header, main
 
 a
   color aqua
+  transition color 0.2s
+  &:hover
+    color dark-aqua
 
 /* Header */
 
