replace brick.im with locally-served typefaces

--- a/themes/tria/source/css/_content.styl
+++ b/themes/tria/source/css/_content.styl
@@ -52,6 +52,10 @@ main
     margin-left 1.2rem
     padding-left 0.6rem
 
+  pre, code
+    font-family 'Fira Mono'
+    font-size 0.9rem
+
   img, iframe
     display block
     max-width 30.0rem
