--- a/themes/tria/source/css/style.styl
+++ b/themes/tria/source/css/style.styl
@@ -6,6 +6,8 @@ dark-aqua = rgb(  0, 135, 127)
 orange    = rgb(248, 142,  41)
 purple    = rgb(182,  81, 154)
 
+@import '_fonts'
+
 *
   border 0
   box-sizing border-box
@@ -54,6 +56,7 @@ header
     font-size 1.1rem
     font-weight 300
     text-transform uppercase
+      
 
     &:after
       content ''
@@ -69,7 +72,7 @@ header
       left 50%
       margin-left -29px
 
-  a
+  a, a:hover
     color currentColor
     text-decoration none
 
