add some color to the main title

--- a/themes/tria/source/css/_content.styl
+++ b/themes/tria/source/css/_content.styl
@@ -40,12 +40,18 @@ main
     font-size 0.9rem
     margin-bottom 1.2rem
 
-  dd, blockquote, blockquote p
+  dd, blockquote, blockquote p, figcaption
     color mix(black, alabaster, 45%)
     font-size 0.9rem
     font-style italic
     margin-bottom 0.6rem
     margin-left 0.6rem
+    margin-right 0.6rem
+
+  figcaption
+    font-size 0.7rem
+    margin 0.3rem 0.6rem 0.6rem
+    text-align center
 
   pre, blockquote
     border-left 0.2rem solid darken(alabaster, 10%)
@@ -61,6 +67,10 @@ main
     max-width 30.0rem
     margin-left auto
     margin-right auto
+
+  img
+    border-radius 0.5rem
+    box-shadow 0 0.2rem darken(alabaster, 10%)
 
   iframe
     min-height 15.0rem
