--- a/themes/tria/layout/layout.ejs
+++ b/themes/tria/layout/layout.ejs
@@ -7,7 +7,7 @@
 </head>
 <body>
   <header>
-    <h1><a href="/">Tim G. Thomas</a></h1>
+    <h1><a href="/">Tim <em>G</em> Thomas</a></h1>
     <nav role="navigation">
       <ul>
         <li><a href="#" class="nav-feed"></a></li>
