--- a/themes/tria/source/css/style.styl
+++ b/themes/tria/source/css/style.styl
@@ -1,6 +1,7 @@
 @import 'nib'
 
 alabaster = rgb(241, 242, 237)
+shadow    = mix(black, alabaster, 15%)
 aqua      = rgb( 53, 171, 165)
 dark-aqua = rgb(  0, 135, 127)
 orange    = rgb(248, 142,  41)
@@ -56,7 +57,10 @@ header
     font-size 1.1rem
     font-weight 300
     text-transform uppercase
-      
+
+    em
+      font-style normal
+      animation hues 30s infinite linear
 
     &:after
       content ''
@@ -95,7 +99,7 @@ header
       height 16px
       width 16px
 
-      background-color rgba(black, 0.2)
+      background-color shadow
       transition background-color 0.2s
 
     .nav-feed, .nav-github, .nav-twitter
@@ -118,3 +122,19 @@ header
         background-color aqua // #59c3bf
 
 @import '_content'
+
+@keyframes hues
+  0%
+    color shadow
+  16.5%
+    color aqua
+  33%
+    color shadow
+  50%
+    color orange
+  67%
+    color shadow
+  83.2%
+    color purple
+  100%
+    color shadow
