--- a/themes/tria/layout/layout.ejs
+++ b/themes/tria/layout/layout.ejs
@@ -16,8 +16,8 @@
       </ul>
     </nav>
   </header>
-  <main><%- body %></main>
-  <footer>
+  <%- body %>
+  <!-- <footer>
       <a href="#" class="prev">A Previous Post</a>
       <a href="#" class="next">A Later Post</a>
       <h3>Comments</h3>
@@ -37,6 +37,7 @@
           <p>Pariatur, mollitia esse blanditiis laborum ea cumque voluptas rerum atque nemo quam!</p>
         </li>
       </ol>
-    </footer>
+    </footer> -->
+  <p id="copyright">&copy; Tim G. Thomas</p>
 </body>
 </html>
