--- a/themes/tria/source/css/_content.styl
+++ b/themes/tria/source/css/_content.styl
@@ -1,7 +1,15 @@
 main
+  background-image url('../images/section.png')
+  background-position bottom center
+  background-repeat no-repeat
+  background-size 32px
+  margin-bottom 1.8rem
+  margin-top 110px
+  padding-bottom calc(0.6rem + 32px)
+
+main, footer
   display block
   max-width 40.0rem
-  margin-top 110px
 
   h1, h2, h3
     font-weight 300
@@ -75,3 +83,12 @@ main
   iframe
     min-height 15.0rem
     width 100%
+
+footer
+  font-size 0.9rem
+
+#copyright
+  color shadow
+  font-size 0.8rem
+  text-align center
+  margin-bottom 0.6rem
