--- a/themes/tria/layout/post.ejs
+++ b/themes/tria/layout/post.ejs
@@ -1,9 +1,13 @@
-<h1><%= page.title %></h1>
-<%- page.content %>
+<main>
+  <h1><%= page.title %></h1>
+  <%- page.content %>
+</main>
 
-<% if (page.prev) { %>
-  <a href="<%- url_for(page.prev.path) %>"><%= page.prev.title %></a>
-<% } %>
-<% if (page.next) { %>
-  <a href="<%- url_for(page.next.path) %>"><%= page.next.title %></a>
-<% } %>
+<footer>
+  <% if (page.prev) { %>
+    <a href="<%- url_for(page.prev.path) %>"><%= page.prev.title %></a>
+  <% } %>
+  <% if (page.next) { %>
+    <a href="<%- url_for(page.next.path) %>"><%= page.next.title %></a>
+  <% } %>
+</footer>
