--- a/themes/tria/source/css/style.styl
+++ b/themes/tria/source/css/style.styl
@@ -106,6 +106,10 @@ header
       background-image url('../images/icons-inverted.png')
       background-size 48px 16px
 
+    @media (-webkit-min-device-pixel-ratio: 2), (min-resolution: 192dpi), (min-resolution: 192dppx)
+      .nav-feed, .nav-github, .nav-twitter
+        background-image url('../images/icons-inverted@2x.png')
+
     .nav-feed
       background-position 0 0
       &:hover
