--- a/themes/tria/layout/post.ejs
+++ b/themes/tria/layout/post.ejs
@@ -1,13 +1,16 @@
 <main>
   <h1><%= page.title %></h1>
   <%- page.content %>
+  <nav>
+    <span class="post-nav-prev">
+      <% if (page.prev) { %>
+        <a href="<%- url_for(page.prev.path) %>"><%= page.prev.title %></a>
+      <% } %>
+    </span>
+    <span class="post-nav-next">
+      <% if (page.next) { %>
+        <a href="<%- url_for(page.next.path) %>"><%= page.next.title %></a>
+      <% } %>
+    </span>
+  </nav>
 </main>
-
-<footer>
-  <% if (page.prev) { %>
-    <a href="<%- url_for(page.prev.path) %>"><%= page.prev.title %></a>
-  <% } %>
-  <% if (page.next) { %>
-    <a href="<%- url_for(page.next.path) %>"><%= page.next.title %></a>
-  <% } %>
-</footer>
