re-enable page titles

--- a/themes/tria/layout/layout.ejs
+++ b/themes/tria/layout/layout.ejs
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Tim G. Thomas</title>
+  <title><%= page.title || 'Tim G. Thomas' %></title>
   <link rel="stylesheet" href="/css/style.css">
 </head>
 <body>
