--- a/themes/tria/layout/layout.ejs
+++ b/themes/tria/layout/layout.ejs
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title><%= page.title || 'Tim G. Thomas' %></title>
+  <link rel="icon" type="image/x-icon" href="/favicon.png">
   <link rel="stylesheet" href="/css/style.css">
 </head>
 <body>
