--- a/themes/tria/layout/layout.ejs
+++ b/themes/tria/layout/layout.ejs
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title><%= page.title || 'Tim G. Thomas' %></title>
+  <link rel="alternate" href="http://feeds.feedburner.com/timgthomas" title="Tim G. Thomas" type="application/rss+xml">
   <link rel="icon" type="image/x-icon" href="/favicon.png">
   <link rel="stylesheet" href="/css/style.css">
 </head>
@@ -11,9 +12,9 @@
     <h1><a href="/">Tim <em>G</em> Thomas</a></h1>
     <nav role="navigation">
       <ul>
-        <li><a href="#" class="nav-feed"></a></li>
-        <li><a href="#" class="nav-github" title="github.com/timgthomas"></a></li>
-        <li><a href="#" class="nav-twitter" title="@timgthomas"></a></li>
+        <li><a href="http://feeds.feedburner.com/timgthomas" class="nav-feed"></a></li>
+        <li><a href="http://github.com/timgthomas" class="nav-github" title="github.com/timgthomas"></a></li>
+        <li><a href="http://twitter.com/timgthomas" class="nav-twitter" title="@timgthomas"></a></li>
       </ul>
     </nav>
   </header>
