restore missing analytics tracker

--- a/themes/tria/layout/layout.ejs
+++ b/themes/tria/layout/layout.ejs
@@ -20,5 +20,6 @@
   </header>
   <%- body %>
   <p id="copyright">&copy; Tim G. Thomas</p>
+  <%- partial('_partial/analytics') %>
 </body>
 </html>
