add unique identifiers so disqus can load comments correctly

--- a/themes/tria/layout/_partial/comments.ejs
+++ b/themes/tria/layout/_partial/comments.ejs
@@ -4,9 +4,8 @@
     <div id="disqus_thread"></div>
     <script>
       var disqus_shortname = '<%= config.disqus_shortname %>';
-      <% if (page.permalink) { %>
-        var disqus_url = '<%= page.permalink %>';
-      <% } %>
+      var disqus_url = '<%= page.permalink %>';
+      var disqus_title = '<%= page.title %>';
       (function(){
         var dsq = document.createElement('script');
         dsq.type = 'text/javascript';
