--- a/themes/tria/layout/index.ejs
+++ b/themes/tria/layout/index.ejs
@@ -11,4 +11,4 @@
   </nav>
 </main>
 
-<%- partial('_partial/comments', { post: page }) %>
+<%- partial('_partial/comments', { page: firstpost }) %>
