add some color to code samples

--- a/themes/tria/source/css/_content.styl
+++ b/themes/tria/source/css/_content.styl
@@ -31,6 +31,10 @@ main, footer
     line-height 1.618
     margin-bottom 0.6rem
 
+  pre
+    margin-bottom 1.2rem
+    margin-top 1.2rem
+
   h2
     color purple
     letter-spacing 0.075rem
