write new blog post and tweak image presentation

--- a/themes/tria/source/css/_content.styl
+++ b/themes/tria/source/css/_content.styl
@@ -83,8 +83,7 @@ main, footer
   img, iframe
     display block
     max-width 30.0rem
-    margin-left auto
-    margin-right auto
+    margin 1.2rem auto
 
   // Disqus <iframe> shouldn't follow the same rules.
   iframe#dsq-2
@@ -92,7 +91,6 @@ main, footer
 
   img
     border-radius 0.5rem
-    box-shadow 0 0.2rem darken(alabaster, 10%)
 
     &.inline
       border-radius 0
