update icons and add link to archives

--- a/themes/tria/source/css/_fonts.styl
+++ b/themes/tria/source/css/_fonts.styl
@@ -17,3 +17,9 @@
   src url('../fonts/FiraSans-300i.eot?') format('eot'),
       url('../fonts/FiraSans-300i.woff') format('woff'),
       url('../fonts/FiraSans-300i.ttf')  format('truetype')
+
+@font-face
+  font-family 'Icons'
+  src url('../fonts/icons.eot?') format('eot'),
+      url('../fonts/icons.woff') format('woff'),
+      url('../fonts/icons.ttf')  format('truetype')
