--- a/themes/tria/layout/layout.ejs
+++ b/themes/tria/layout/layout.ejs
@@ -12,7 +12,8 @@
     <h1><a href="/">Tim <em>G</em> Thomas</a></h1>
     <nav role="navigation">
       <ul>
-        <li><a href="http://feeds.feedburner.com/timgthomas" class="nav-feed"></a></li>
+        <li><a href="/archives" class="nav-archives" title="View blog post archives"></a></li>
+        <li><a href="http://feeds.feedburner.com/timgthomas" class="nav-feed" title="Subscribe to this site with RSS"></a></li>
         <li><a href="http://github.com/timgthomas" class="nav-github" title="github.com/timgthomas"></a></li>
         <li><a href="http://twitter.com/timgthomas" class="nav-twitter" title="@timgthomas"></a></li>
       </ul>
