correctly set page title on landing page

--- a/themes/tria/layout/layout.ejs
+++ b/themes/tria/layout/layout.ejs
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title><%= page.title || 'Tim G. Thomas' %></title>
+  <title><%= page.title || page.posts.first().title || 'Tim G. Thomas' %></title>
   <link rel="alternate" href="http://feeds.feedburner.com/timgthomas" title="Tim G. Thomas" type="application/rss+xml">
   <link rel="icon" type="image/x-icon" href="/favicon.png">
   <link rel="stylesheet" href="/css/style.css">
