style some additional content pieces

--- a/themes/tria-2015/layout/layout.ejs
+++ b/themes/tria-2015/layout/layout.ejs
@@ -6,12 +6,12 @@
   <title><%= page.title || page.posts.first().title || 'Tim G. Thomas' %></title>
   <link rel="alternate" href="http://feeds.feedburner.com/timgthomas" title="Tim G. Thomas" type="application/rss+xml">
   <link rel="icon" type="image/x-icon" href="/favicon.png">
-  <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Fira+Sans:300,400,500,700,300italic,400italic,500italic,700italic">
+  <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Fira+Sans:300,400,500,700,300italic,400italic,500italic,700italic|Fira+Mono">
   <link rel="stylesheet" href="/css/style.css">
 </head>
 <body>
   <header role="banner">
-    <h1>Tim <em>G</em> Thomas</h1>
+    <h1><a href="/">Tim <em>G</em> Thomas</a></h1>
   </header>
   <aside>
     <div class="container">
