--- a/themes/tria-2015/source/css/style.styl
+++ b/themes/tria-2015/source/css/style.styl
@@ -63,6 +63,10 @@ body
       background-image url('../images/logo-chevron.png')
       background-size 52px 18px
 
+    a
+      color inherit
+      text-decoration none
+
   em
     font-style normal
 
@@ -172,6 +176,7 @@ aside
 
   p
     color mix(black, alabaster, 65%)
+    font-size 1.8rem
 
   p,
   pre
@@ -179,6 +184,7 @@ aside
 
   pre
     overflow-x auto
+    -webkit-overflow-scrolling touch
 
     font-size 1.4rem
     line-height 2.0rem
