--- a/themes/tria-2015/source/css/style.styl
+++ b/themes/tria-2015/source/css/style.styl
@@ -3,6 +3,7 @@
 alabaster = rgb(241, 242, 237)
 blackrock = rgb( 49,  46,  63)
 
+shade     = mix(black, alabaster, 25%)
 shadow    = mix(black, alabaster)
 aqua      = rgb( 53, 171, 165)
 dark-aqua = rgb(  0, 135, 127)
@@ -54,7 +55,7 @@ body
     background-position left center
     background-size 38px 44px
 
-    color gray
+    color shadow
     font-size 2.4rem
     font-weight 300
     line-height 68px
@@ -138,21 +139,30 @@ aside
 
     background-image url('../images/link.png')
     background-size 40px 44px
-    opacity 0.5
 
     color currentColor
     line-height 44px
     text-align center
     text-decoration none
 
+    &:hover
+      svg
+        fill white
+
     &:active
+      svg
+        fill white
       .icon
         fill blackrock
       .fill
         fill white
 
   svg
-    fill white
+    fill shade
+
+    &,
+    *
+      transition fill 200ms
 
   .fill
     fill transparent
