--- a/themes/tria-2015/source/css/_content.styl
+++ b/themes/tria-2015/source/css/_content.styl
@@ -57,10 +57,13 @@
 
   pre, code
     font-family 'Fira Mono'
-    font-size 1.4rem
+    font-size 1.5rem
 
   pre
     width calc(100% - 2.4rem)
+
+  strong
+    font-weight 500
 
   img, iframe
     display block
