--- a/themes/tria-2015/source/css/_content.styl
+++ b/themes/tria-2015/source/css/_content.styl
@@ -1,7 +1,7 @@
 [role='main'], footer
 
   h2, h3
-    font-weight 300
+    font-weight 400
     text-align center
     text-transform uppercase
 
@@ -42,6 +42,13 @@
     margin-left 1.2rem
     margin-right 1.2rem
 
+  blockquote p
+    font-size 1.6rem
+    margin-left 0
+
+  blockquote p code
+    font-size 1.4rem
+
   dt, dd
     font-size 1.4rem
 
@@ -53,7 +60,7 @@
   pre, blockquote
     border-left 0.2rem solid darken(alabaster, 10%)
     margin-left 1.2rem
-    padding-left 0.6rem
+    padding-left 1.2rem
 
   pre, code
     font-family 'Fira Mono'
@@ -61,6 +68,23 @@
 
   pre
     width calc(100% - 2.4rem)
+
+  p code,
+  li code
+    display inline-block
+    padding 0 8px
+
+    background-color darken(alabaster, 5%)
+    border-radius 4px
+
+    font-style normal
+    line-height 2.4rem
+
+  figure table
+    width 100%
+
+    pre
+      margin-top 0
 
   strong
     font-weight 500
@@ -84,6 +108,14 @@
   iframe
     min-height 15.0rem
     width 100%
+
+  hr
+    border none
+    height 1px
+    background-color darken(alabaster, 25%)
+    margin-bottom 16px
+    width 25%
+    margin 2.4rem auto
 
 footer
   font-size 0.9rem
