add structured data to posts

--- a/themes/tria-2015/layout/index.ejs
+++ b/themes/tria-2015/layout/index.ejs
@@ -6,6 +6,7 @@
       <p><%= date(firstpost.date, config.date_format) %></p>
     </header>
     <%- firstpost.content %>
+    <%- partial('_partial/structured-data', { post: firstpost }) %>
   </article>
   <nav>
     <span class="post-nav-prev"></span>
