--- a/themes/tria-2015/layout/post.ejs
+++ b/themes/tria-2015/layout/post.ejs
@@ -5,6 +5,7 @@
       <p><%= date(page.date, config.date_format) %></p>
     </header>
     <%- page.content %>
+    <%- partial('_partial/structured-data', { post: page }) %>
   </article>
   <nav>
     <span class="post-nav-next">
