add syntax highlighting for css

--- a/themes/tria-2015/source/css/_code.styl
+++ b/themes/tria-2015/source/css/_code.styl
@@ -7,3 +7,14 @@ pre
     color aqua
   .comment
     color darken(alabaster, 30%)
+
+  // CSS
+  .class,
+  .attr_selector
+    color aqua
+
+  .pseudo
+    color purple
+
+  .value
+    color orange
