--- a/themes/tria-2015/layout/layout.ejs
+++ b/themes/tria-2015/layout/layout.ejs
@@ -16,7 +16,7 @@
   <aside>
     <div class="container">
       <p>I apply holistic design principles to make the web both usable and beautiful.</p>
-      <p>
+      <p class="social">
         <a href="https://twitter.com/timgthomas" target="_blank">
           <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 40 44">
             <path class="fill" d="M20,44c-0.9,0-1.7-0.2-2.5-0.7l-15-8.5C1,33.9,0,32.3,0,30.5V13.5c0-1.8,1-3.4,2.5-4.3l15-8.5c1.5-0.9,3.5-0.9,5,0l15,8.5c1.5,0.9,2.5,2.5,2.5,4.3v17.1c0,1.8-1,3.4-2.5,4.3l-15,8.5C21.7,43.8,20.9,44,20,44z"/>
