fix archive styles

--- a/themes/tria-2015/layout/archive.ejs
+++ b/themes/tria-2015/layout/archive.ejs
@@ -1,7 +1,9 @@
 <% page.title = 'Archives'; %>
 
-<main>
-  <h1>Blog Archives</h1>
+<div role="main">
+  <header>
+    <h1>Blog Archives</h1>
+  </header>
   <% var last; %>
   <% page.posts.each(function(post) { %>
     <% var year = post.date.year(); %>
@@ -19,4 +21,4 @@
   <% if (page.posts.length) { %>
   </dl>
   <% } %>
-</main>
+</div>
