--- a/themes/tria-2015/source/css/style.styl
+++ b/themes/tria-2015/source/css/style.styl
@@ -26,7 +26,6 @@ html
   line-height 1
 
 body
-  padding-top 72px
   background-color alabaster
   font-family 'Fira Sans'
   font-weight 200
@@ -83,13 +82,13 @@ body
 
 aside
   box-sizing border-box
-  height 164px
+  height 236px
   margin-bottom 16px
-  padding 24px 8px 16px
+  padding 96px 8px 16px
   overflow hidden
 
   background-color blackrock
-  background-image linear-gradient(to bottom, #1e1d27, #48475f)
+  background-image linear-gradient(to bottom, #1e1d27 72px, #48475f)
   color alabaster
 
   .container
