--- a/themes/tria-2015/layout/layout.ejs
+++ b/themes/tria-2015/layout/layout.ejs
@@ -11,7 +11,10 @@
 </head>
 <body>
   <header role="banner">
-    <h1><a href="/">Tim <em>G</em> Thomas</a></h1>
+    <div class="container">
+      <h1><a href="/">Tim <em>G</em> Thomas</a></h1>
+      <a href="http://hire.timgthomas.com/" class="hire">I’m available for hire!</a>
+    </div>
   </header>
   <aside>
     <div class="container">
