--- a/themes/tria-2019/layout/layout.ejs
+++ b/themes/tria-2019/layout/layout.ejs
@@ -1,8 +1,10 @@
 <!doctype html>
 <html lang="en">
 <head>
-  <link rel="stylesheet" href="//fonts.googleapis.com/css?family=Fira+Sans">
+  <link rel="stylesheet" href="//fonts.googleapis.com/css?family=Fira+Sans:300,400">
   <link rel="stylesheet" href="/css/style.css">
+  <meta charset="utf-8">
+  <title><%= page.title ? page.title + ' | ' : '' %>Tim G. Thomas</title>
 </head>
 <body>
   <header role="banner">
