--- a/themes/tria-2019/source/css/_palette.scss
+++ b/themes/tria-2019/source/css/_palette.scss
@@ -1,4 +1,5 @@
 :root {
   --color-background: hsl(60,  3%, 25%);
   --color-foreground: hsl(70, 12%, 82%);
+  --color-foreground-active: hsl(70, 7%, 64%);
 }
