--- a/themes/tria-2019/source/css/style.scss
+++ b/themes/tria-2019/source/css/style.scss
@@ -13,6 +13,7 @@
   box-sizing: border-box;
   font-family: 'Fira Sans', sans-serif;
   font-size: 62.5%;
+  font-weight: 400;
   line-height: 1;
 }
 
@@ -22,3 +23,4 @@ body {
 }
 
 @import '_banner';
+@import '_content';
