add projects and index page

--- a/themes/tria-2019/layout/layout.ejs
+++ b/themes/tria-2019/layout/layout.ejs
@@ -9,14 +9,15 @@
 <body>
   <header role="banner">
     <h1>
-      <a href="/">Tim G Thomas</a>
+      <a class="<%- is_current('/', true) ? 'active' : '' %>" href="/">Tim G Thomas</a>
     </h1>
     <nav>
-      <a href="/blog">Blog</a>
-      <a href="/projects">Projects</a>
-      <a href="/talks">Talks</a>
+      <a class="<%- is_current('blog') ? 'active' : '' %>" href="<%= url_for(site.posts.last().path) %>">Blog</a>
+      <a class="<%- is_current('projects') ? 'active' : '' %>" href="/projects">Projects</a>
+      <a class="<%- is_current('talks') ? 'active' : '' %>" href="/talks">Talks</a>
     </nav>
   </header>
   <main><%- body %></main>
+  <footer>&copy; Tim G. Thomas</footer>
 </body>
 </html>
