--- a/themes/tria-2019/source/css/_palette.scss
+++ b/themes/tria-2019/source/css/_palette.scss
@@ -2,4 +2,6 @@
   --color-background: hsl(60,  3%, 25%);
   --color-foreground: hsl(70, 12%, 82%);
   --color-foreground-active: hsl(70, 7%, 64%);
+
+  --base-size: 1.4rem;
 }
