--- a/themes/tria-2019/layout/index.ejs
+++ b/themes/tria-2019/layout/index.ejs
@@ -1,1 +1,19 @@
-Test.
+<!-- <h1>Upcoming Talks</h1> -->
+<!-- <p>TBD</p> -->
+<h1>Recent Posts</h1>
+<ol>
+  <% for (let post of site.posts.data.slice(-4).reverse()) { %>
+    <h2><%= post.title %></h2>
+    <p><%= date(post.date, config.date_format) %></p>
+    <%- post.excerpt %>
+  <% } %>
+</ol>
+<% let featuredProjects = site.data.projects.filter(p => p.featured) %>
+<% if (featuredProjects.length) { %>
+  <h1>Featured Projects</h1>
+  <ul>
+    <% for (let project of featuredProjects) { %>
+      <h2><%= project.name %></h2>
+    <% } %>
+  </ul>
+<% } %>
