--- a/themes/tria-2019/layout/projects.hbs
+++ b/themes/tria-2019/layout/projects.hbs
@@ -1,8 +1,17 @@
 <h1>{{page.title}}</h1>
-<ul>
+<ul class="projects">
   {{#each site.data.projects}}
     <li>
-      {{name}}: {{link}}
+      <h2>{{name}}</h2>
+      <p>{{description}}</p>
+      {{#if links.length}}
+        <nav aria-labelledby="{{id}}-links">
+          <h3 id="{{id}}-links">Links</h3>
+          {{#each links}}
+            <a href="{{link}}">{{type}}</a>
+          {{/each}}
+        </nav>
+      {{/if}}
     </li>
   {{/each}}
 </ul>
