--- a/themes/tria-2019/source/css/style.scss
+++ b/themes/tria-2019/source/css/style.scss
@@ -17,9 +17,30 @@
   line-height: 1;
 }
 
+a {
+  transition: color 250ms;
+
+  &:hover {
+    color: #fff;
+    transition-duration: 0ms;
+  }
+
+  &:active {
+    color: var(--color-foreground-active);
+    transition-duration: 0ms;
+  }
+}
+
 body {
   background-color: var(--color-background);
   color: var(--color-foreground);
+}
+
+footer {
+  font-size: 1.2rem;
+  font-weight: 200;
+  margin: calc(var(--base-size) * 2) 0;
+  text-align: center;
 }
 
 @import '_banner';
