--- a/themes/tria-2019/layout/post.hbs
+++ b/themes/tria-2019/layout/post.hbs
@@ -1,7 +1,7 @@
 <article>
   <header>
     <h1>{{page.title}}</h1>
-    <p>{{date page.date config.date_format}}</p>
+    <time>{{date page.date config.date_format}}</time>
   </header>
   {{{page.content}}}
   <nav>
