switch to locally-served fonts

--- a/themes/tria-2019/source/css/_palette.scss
+++ b/themes/tria-2019/source/css/_palette.scss
@@ -5,3 +5,17 @@
 
   --base-size: 1.4rem;
 }
+
+@font-face {
+  font-family: 'Fira Sans';
+  font-style: normal;
+  font-weight: 400;
+  src: url('/fonts/fira-sans-400.woff2') format('woff2'), url('/fonts/fira-sans-400.woff') format('woff');
+}
+
+@font-face {
+  font-family: 'Fira Sans';
+  font-style: normal;
+  font-weight: 500;
+  src: url('/fonts/fira-sans-500.woff2') format('woff2'), url('/fonts/fira-sans-500.woff') format('woff');
+}
