--- a/themes/tria-2019/layout/index.ejs
+++ b/themes/tria-2019/layout/index.ejs
@@ -3,11 +3,13 @@
 <h1>Recent Posts</h1>
 <ol>
   <% for (let post of site.posts.data.slice(-4).reverse()) { %>
-    <h2>
-      <a href="<%= url_for(post.path) %>"><%= post.title %></a>
-    </h2>
-    <time><%= date(post.date) %></time>
-    <p class="excerpt"><%= strip_html(post.excerpt) %></p>
+    <li class="post">
+      <a href="<%= url_for(post.path) %>">
+        <h2><%= post.title %></h2>
+        <!-- <time><%= date(post.date) %></time> -->
+        <p class="excerpt"><%= strip_html(post.excerpt) %></p>
+      </a>
+    </li>
   <% } %>
 </ol>
 <% let featuredProjects = site.data.projects.filter(p => p.featured) %>
