--- a/themes/tria-2019/source/css/style.scss
+++ b/themes/tria-2019/source/css/style.scss
@@ -34,6 +34,7 @@ a {
 body {
   background-color: var(--color-background);
   color: var(--color-foreground);
+  padding-top: calc(var(--base-size) * 4);
 }
 
 p {
